--- a/src/pages/LivroDetalhes.css
+++ b/src/pages/LivroDetalhes.css
@@ -169,3 +169,14 @@
 .btn-fechar-modal:hover {
   background-color: #f0f0f0;
 }
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  width: 100%;
+  font-size: 1.5rem;
+  color: #4B2E2E;
+  font-weight: 500;
+}
