--- a/src/components/PerfilHeader.css
+++ b/src/components/PerfilHeader.css
@@ -196,3 +196,35 @@
 .btn-save:hover {
   background-color: #79a93f;
 }
+
+.edit-password-wrapper {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.edit-password-wrapper input {
+  width: 100%;
+  padding-right: 40px;
+}
+
+.edit-password-toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  color: #888;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+
+.edit-password-toggle:hover {
+  color: #4B2E2E;
+}
