confirmação de cadastro

--- a/src/pages/Forms.css
+++ b/src/pages/Forms.css
@@ -22,6 +22,7 @@
   box-shadow: 0 4px 24px #0001;
   width: 600px;
   max-width: 95vw;
+  margin: 50px;
   padding: 64px 56px;
   display: flex;
   flex-direction: column;
